@@ -1,3 +1,5 @@
+15-Mar-2017 Fixes #107. Removed deprecated 'removetrailingseperator' TokenizedString post-function.
+
 15-Mar-2017 Fixes #303. Added configuration support for named Module types. New Core interfaces: Bam.Core.IHasModuleConfiguration, Bam.Core.IModuleConfiguration, Bam.Core.IOverrideModuleConfiguration. IHasModuleConfiguration is implemented by Modules indicating they have a configuration interface, and requires two properties returning Module specific types. The configuration interface is defined per module, but must implement IModuleConfiguration, and only declare the read-only properties that are exposed for configuring the Module. Additionally, the Module must defined a non-abstract class, implementing its configuration interface, and also defining the default configuration in a constructor, and public setters for the properties. The Modules patches can now access an instance of the interface through the Configuration property on the Module itself, in order to honour the configuration the user requests. Changing a configuration property in a patch will result in ambiguous behaviour. Top-level packages should define a class implementing the IOverrideModuleConfiguration interface; this declares a function to which the Core will pass IModuleConfiguration instances; the user can cast these to the writeable configuration classes in order to set the properties. Arbitrary code can be executed here, e.g. searching for header files, or running an executable. This code is executed just before the Modules Init() function. See the ConfigurationTest1 test case.
 
 ======== End of v1.0 releases ========
